# taskwarrior-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  shell.nix
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml
taskwarrior/: Cargo.toml  README.md
taskwarrior-sys/: .gitignore  Cargo.toml  build.rs  shims.h  wrapper.cpp  wrapper.h
taskwarrior-sys/src/: lib.rs
taskwarrior/src/: lib.rs
twrs/: Cargo.toml  README.md
twrs/src/: main.rs
